app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snowflake-deployment
  labels:
    app: snowflake-id-generator
  annotations:
    kubernetes.io/change-cause: "Update 1.0.3"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: snowflake-id-generator
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: snowflake-id-generator
    spec:
      containers:
        - name: snowflake-id-generator
          image: meirzhan250/snowflake-id-generator:1.0.3
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /management/health/liveness
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 2
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /management/health/readiness
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
      volumes:
        - name: worker-config-volume
          emptyDir: {}
        - name: snowflake-config-volume
          configMap:
            name: snowflake-config
