app-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: snowflake-id-generator-pod
spec:
  containers:
    - name: snowflake-id-generator
      livenessProbe:
        httpGet:
          path: /healthy
          port: 8080
        initialDelaySeconds: 15
        timeoutSeconds: 2
        periodSeconds: 15
        failureThreshold: 3
      readinessProbe:
        httpGet:
          path: /ready
          port: 8080
        initialDelaySeconds: 5
        timeoutSeconds: 1
        periodSeconds: 5
        failureThreshold: 3
        successThreshold: 1
      image: meirzhan250/snowflake-id-generator:1.0.0
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
